lib/src/parser/gen/CELParser.dart
// Generated from CEL.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'CELListener.dart';
import 'CELBaseListener.dart';

const int RULE_start = 0,
    RULE_expr = 1,
    RULE_conditionalOr = 2,
    RULE_conditionalAnd = 3,
    RULE_relation = 4,
    RULE_calc = 5,
    RULE_unary = 6,
    RULE_member = 7,
    RULE_primary = 8,
    RULE_exprList = 9,
    RULE_listInit = 10,
    RULE_fieldInitializerList = 11,
    RULE_optField = 12,
    RULE_mapInitializerList = 13,
    RULE_optExpr = 14,
    RULE_literal = 15,
    RULE_escapeIdent = 16;

class CELParser extends Parser {
  static final checkVersion =
      () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache =
      PredictionContextCache();
  static const int TOKEN_EQUALS = 1,
      TOKEN_NOT_EQUALS = 2,
      TOKEN_IN = 3,
      TOKEN_LESS = 4,
      TOKEN_LESS_EQUALS = 5,
      TOKEN_GREATER_EQUALS = 6,
      TOKEN_GREATER = 7,
      TOKEN_LOGICAL_AND = 8,
      TOKEN_LOGICAL_OR = 9,
      TOKEN_LBRACKET = 10,
      TOKEN_RPRACKET = 11,
      TOKEN_LBRACE = 12,
      TOKEN_RBRACE = 13,
      TOKEN_LPAREN = 14,
      TOKEN_RPAREN = 15,
      TOKEN_DOT = 16,
      TOKEN_COMMA = 17,
      TOKEN_MINUS = 18,
      TOKEN_EXCLAM = 19,
      TOKEN_QUESTIONMARK = 20,
      TOKEN_COLON = 21,
      TOKEN_PLUS = 22,
      TOKEN_STAR = 23,
      TOKEN_SLASH = 24,
      TOKEN_PERCENT = 25,
      TOKEN_CEL_TRUE = 26,
      TOKEN_CEL_FALSE = 27,
      TOKEN_NUL = 28,
      TOKEN_WHITESPACE = 29,
      TOKEN_COMMENT = 30,
      TOKEN_NUM_FLOAT = 31,
      TOKEN_NUM_INT = 32,
      TOKEN_NUM_UINT = 33,
      TOKEN_STRING = 34,
      TOKEN_BYTES = 35,
      TOKEN_IDENTIFIER = 36,
      TOKEN_ESC_IDENTIFIER = 37;

  @override
  final List<String> ruleNames = [
    'start',
    'expr',
    'conditionalOr',
    'conditionalAnd',
    'relation',
    'calc',
    'unary',
    'member',
    'primary',
    'exprList',
    'listInit',
    'fieldInitializerList',
    'optField',
    'mapInitializerList',
    'optExpr',
    'literal',
    'escapeIdent'
  ];

  static final List<String?> _LITERAL_NAMES = [
    null,
    "'=='",
    "'!='",
    "'in'",
    "'<'",
    "'<='",
    "'>='",
    "'>'",
    "'&&'",
    "'||'",
    "'['",
    "']'",
    "'{'",
    "'}'",
    "'('",
    "')'",
    "'.'",
    "','",
    "'-'",
    "'!'",
    "'?'",
    "':'",
    "'+'",
    "'*'",
    "'/'",
    "'%'",
    "'true'",
    "'false'",
    "'null'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
    null,
    "EQUALS",
    "NOT_EQUALS",
    "IN",
    "LESS",
    "LESS_EQUALS",
    "GREATER_EQUALS",
    "GREATER",
    "LOGICAL_AND",
    "LOGICAL_OR",
    "LBRACKET",
    "RPRACKET",
    "LBRACE",
    "RBRACE",
    "LPAREN",
    "RPAREN",
    "DOT",
    "COMMA",
    "MINUS",
    "EXCLAM",
    "QUESTIONMARK",
    "COLON",
    "PLUS",
    "STAR",
    "SLASH",
    "PERCENT",
    "CEL_TRUE",
    "CEL_FALSE",
    "NUL",
    "WHITESPACE",
    "COMMENT",
    "NUM_FLOAT",
    "NUM_INT",
    "NUM_UINT",
    "STRING",
    "BYTES",
    "IDENTIFIER",
    "ESC_IDENTIFIER"
  ];
  static final Vocabulary VOCABULARY =
      VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'CEL.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
    return _ATN;
  }

  CELParser(TokenStream input) : super(input) {
    interpreter =
        ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  StartContext start() {
    dynamic _localctx = StartContext(context, state);
    enterRule(_localctx, 0, RULE_start);
    try {
      enterOuterAlt(_localctx, 1);
      state = 34;
      _localctx.e = expr();
      state = 35;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExprContext expr() {
    dynamic _localctx = ExprContext(context, state);
    enterRule(_localctx, 2, RULE_expr);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 37;
      _localctx.e = conditionalOr();
      state = 43;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_QUESTIONMARK) {
        state = 38;
        _localctx.op = match(TOKEN_QUESTIONMARK);
        state = 39;
        _localctx.e1 = conditionalOr();
        state = 40;
        match(TOKEN_COLON);
        state = 41;
        _localctx.e2 = expr();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ConditionalOrContext conditionalOr() {
    dynamic _localctx = ConditionalOrContext(context, state);
    enterRule(_localctx, 4, RULE_conditionalOr);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 45;
      _localctx.e = conditionalAnd();
      state = 50;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_LOGICAL_OR) {
        state = 46;
        _localctx.s9 = match(TOKEN_LOGICAL_OR);
        _localctx.ops.add(_localctx.s9);
        state = 47;
        _localctx._conditionalAnd = conditionalAnd();
        _localctx.e1.add(_localctx._conditionalAnd);
        state = 52;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ConditionalAndContext conditionalAnd() {
    dynamic _localctx = ConditionalAndContext(context, state);
    enterRule(_localctx, 6, RULE_conditionalAnd);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 53;
      _localctx.e = relation(0);
      state = 58;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_LOGICAL_AND) {
        state = 54;
        _localctx.s8 = match(TOKEN_LOGICAL_AND);
        _localctx.ops.add(_localctx.s8);
        state = 55;
        _localctx._relation = relation(0);
        _localctx.e1.add(_localctx._relation);
        state = 60;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RelationContext relation([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = RelationContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 8;
    enterRecursionRule(_localctx, 8, RULE_relation, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 62;
      calc(0);
      context!.stop = tokenStream.LT(-1);
      state = 69;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 3, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          _localctx = RelationContext(_parentctx, _parentState);
          pushNewRecursionContext(_localctx, _startState, RULE_relation);
          state = 64;
          if (!(precpred(context, 1))) {
            throw FailedPredicateException(this, "precpred(context, 1)");
          }
          state = 65;
          _localctx.op = tokenStream.LT(1);
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 254) != 0))) {
            _localctx.op = errorHandler.recoverInline(this);
          } else {
            if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 66;
          relation(2);
        }
        state = 71;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 3, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  CalcContext calc([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = CalcContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 10;
    enterRecursionRule(_localctx, 10, RULE_calc, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 73;
      unary();
      context!.stop = tokenStream.LT(-1);
      state = 83;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 5, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 81;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 4, context)) {
            case 1:
              _localctx = CalcContext(_parentctx, _parentState);
              pushNewRecursionContext(_localctx, _startState, RULE_calc);
              state = 75;
              if (!(precpred(context, 2))) {
                throw FailedPredicateException(this, "precpred(context, 2)");
              }
              state = 76;
              _localctx.op = tokenStream.LT(1);
              _la = tokenStream.LA(1)!;
              if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 58720256) != 0))) {
                _localctx.op = errorHandler.recoverInline(this);
              } else {
                if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
                errorHandler.reportMatch(this);
                consume();
              }
              state = 77;
              calc(3);
              break;
            case 2:
              _localctx = CalcContext(_parentctx, _parentState);
              pushNewRecursionContext(_localctx, _startState, RULE_calc);
              state = 78;
              if (!(precpred(context, 1))) {
                throw FailedPredicateException(this, "precpred(context, 1)");
              }
              state = 79;
              _localctx.op = tokenStream.LT(1);
              _la = tokenStream.LA(1)!;
              if (!(_la == TOKEN_MINUS || _la == TOKEN_PLUS)) {
                _localctx.op = errorHandler.recoverInline(this);
              } else {
                if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
                errorHandler.reportMatch(this);
                consume();
              }
              state = 80;
              calc(2);
              break;
          }
        }
        state = 85;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 5, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  UnaryContext unary() {
    dynamic _localctx = UnaryContext(context, state);
    enterRule(_localctx, 12, RULE_unary);
    int _la;
    try {
      int _alt;
      state = 99;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 8, context)) {
        case 1:
          _localctx = MemberExprContext(_localctx);
          enterOuterAlt(_localctx, 1);
          state = 86;
          member(0);
          break;
        case 2:
          _localctx = LogicalNotContext(_localctx);
          enterOuterAlt(_localctx, 2);
          state = 88;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          do {
            state = 87;
            _localctx.s19 = match(TOKEN_EXCLAM);
            _localctx.ops.add(_localctx.s19);
            state = 90;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          } while (_la == TOKEN_EXCLAM);
          state = 92;
          member(0);
          break;
        case 3:
          _localctx = NegateContext(_localctx);
          enterOuterAlt(_localctx, 3);
          state = 94;
          errorHandler.sync(this);
          _alt = 1;
          do {
            switch (_alt) {
              case 1:
                state = 93;
                _localctx.s18 = match(TOKEN_MINUS);
                _localctx.ops.add(_localctx.s18);
                break;
              default:
                throw NoViableAltException(this);
            }
            state = 96;
            errorHandler.sync(this);
            _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
          } while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER);
          state = 98;
          member(0);
          break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  MemberContext member([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = MemberContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 14;
    enterRecursionRule(_localctx, 14, RULE_member, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      _localctx = PrimaryExprContext(_localctx);
      context = _localctx;
      _prevctx = _localctx;

      state = 102;
      primary();
      context!.stop = tokenStream.LT(-1);
      state = 128;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 13, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 126;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 12, context)) {
            case 1:
              _localctx =
                  SelectContext(new MemberContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_member);
              state = 104;
              if (!(precpred(context, 3))) {
                throw FailedPredicateException(this, "precpred(context, 3)");
              }
              state = 105;
              _localctx.op = match(TOKEN_DOT);
              state = 107;
              errorHandler.sync(this);
              _la = tokenStream.LA(1)!;
              if (_la == TOKEN_QUESTIONMARK) {
                state = 106;
                _localctx.opt = match(TOKEN_QUESTIONMARK);
              }

              state = 109;
              _localctx.id = escapeIdent();
              break;
            case 2:
              _localctx = MemberCallContext(
                  new MemberContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_member);
              state = 110;
              if (!(precpred(context, 2))) {
                throw FailedPredicateException(this, "precpred(context, 2)");
              }
              state = 111;
              _localctx.op = match(TOKEN_DOT);
              state = 112;
              _localctx.id = match(TOKEN_IDENTIFIER);
              state = 113;
              _localctx.open = match(TOKEN_LPAREN);
              state = 115;
              errorHandler.sync(this);
              _la = tokenStream.LA(1)!;
              if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 135762105344) != 0)) {
                state = 114;
                _localctx.args = exprList();
              }

              state = 117;
              match(TOKEN_RPAREN);
              break;
            case 3:
              _localctx =
                  IndexContext(new MemberContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_member);
              state = 118;
              if (!(precpred(context, 1))) {
                throw FailedPredicateException(this, "precpred(context, 1)");
              }
              state = 119;
              _localctx.op = match(TOKEN_LBRACKET);
              state = 121;
              errorHandler.sync(this);
              _la = tokenStream.LA(1)!;
              if (_la == TOKEN_QUESTIONMARK) {
                state = 120;
                _localctx.opt = match(TOKEN_QUESTIONMARK);
              }

              state = 123;
              _localctx.index = expr();
              state = 124;
              match(TOKEN_RPRACKET);
              break;
          }
        }
        state = 130;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 13, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  PrimaryContext primary() {
    dynamic _localctx = PrimaryContext(context, state);
    enterRule(_localctx, 16, RULE_primary);
    int _la;
    try {
      state = 182;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 25, context)) {
        case 1:
          _localctx = IdentOrGlobalCallContext(_localctx);
          enterOuterAlt(_localctx, 1);
          state = 132;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_DOT) {
            state = 131;
            _localctx.leadingDot = match(TOKEN_DOT);
          }

          state = 134;
          _localctx.id = match(TOKEN_IDENTIFIER);
          state = 140;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 16, context)) {
            case 1:
              state = 135;
              _localctx.op = match(TOKEN_LPAREN);
              state = 137;
              errorHandler.sync(this);
              _la = tokenStream.LA(1)!;
              if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 135762105344) != 0)) {
                state = 136;
                _localctx.args = exprList();
              }

              state = 139;
              match(TOKEN_RPAREN);
              break;
          }
          break;
        case 2:
          _localctx = NestedContext(_localctx);
          enterOuterAlt(_localctx, 2);
          state = 142;
          match(TOKEN_LPAREN);
          state = 143;
          _localctx.e = expr();
          state = 144;
          match(TOKEN_RPAREN);
          break;
        case 3:
          _localctx = CreateListContext(_localctx);
          enterOuterAlt(_localctx, 3);
          state = 146;
          _localctx.op = match(TOKEN_LBRACKET);
          state = 148;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 135763153920) != 0)) {
            state = 147;
            _localctx.elems = listInit();
          }

          state = 151;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_COMMA) {
            state = 150;
            match(TOKEN_COMMA);
          }

          state = 153;
          match(TOKEN_RPRACKET);
          break;
        case 4:
          _localctx = CreateStructContext(_localctx);
          enterOuterAlt(_localctx, 4);
          state = 154;
          _localctx.op = match(TOKEN_LBRACE);
          state = 156;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 135763153920) != 0)) {
            state = 155;
            _localctx.entries = mapInitializerList();
          }

          state = 159;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_COMMA) {
            state = 158;
            match(TOKEN_COMMA);
          }

          state = 161;
          match(TOKEN_RBRACE);
          break;
        case 5:
          _localctx = CreateMessageContext(_localctx);
          enterOuterAlt(_localctx, 5);
          state = 163;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_DOT) {
            state = 162;
            _localctx.leadingDot = match(TOKEN_DOT);
          }

          state = 165;
          _localctx._IDENTIFIER = match(TOKEN_IDENTIFIER);
          _localctx.ids.add(_localctx._IDENTIFIER);
          state = 170;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_DOT) {
            state = 166;
            _localctx.s16 = match(TOKEN_DOT);
            _localctx.ops.add(_localctx.s16);
            state = 167;
            _localctx._IDENTIFIER = match(TOKEN_IDENTIFIER);
            _localctx.ids.add(_localctx._IDENTIFIER);
            state = 172;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
          state = 173;
          _localctx.op = match(TOKEN_LBRACE);
          state = 175;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 206159478784) != 0)) {
            state = 174;
            _localctx.entries = fieldInitializerList();
          }

          state = 178;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_COMMA) {
            state = 177;
            match(TOKEN_COMMA);
          }

          state = 180;
          match(TOKEN_RBRACE);
          break;
        case 6:
          _localctx = ConstantLiteralContext(_localctx);
          enterOuterAlt(_localctx, 6);
          state = 181;
          literal();
          break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExprListContext exprList() {
    dynamic _localctx = ExprListContext(context, state);
    enterRule(_localctx, 18, RULE_exprList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 184;
      _localctx._expr = expr();
      _localctx.e.add(_localctx._expr);
      state = 189;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 185;
        match(TOKEN_COMMA);
        state = 186;
        _localctx._expr = expr();
        _localctx.e.add(_localctx._expr);
        state = 191;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ListInitContext listInit() {
    dynamic _localctx = ListInitContext(context, state);
    enterRule(_localctx, 20, RULE_listInit);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 192;
      _localctx._optExpr = optExpr();
      _localctx.elems.add(_localctx._optExpr);
      state = 197;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 27, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 193;
          match(TOKEN_COMMA);
          state = 194;
          _localctx._optExpr = optExpr();
          _localctx.elems.add(_localctx._optExpr);
        }
        state = 199;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 27, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FieldInitializerListContext fieldInitializerList() {
    dynamic _localctx = FieldInitializerListContext(context, state);
    enterRule(_localctx, 22, RULE_fieldInitializerList);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 200;
      _localctx._optField = optField();
      _localctx.fields.add(_localctx._optField);
      state = 201;
      _localctx.s21 = match(TOKEN_COLON);
      _localctx.cols.add(_localctx.s21);
      state = 202;
      _localctx._expr = expr();
      _localctx.values.add(_localctx._expr);
      state = 210;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 28, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 203;
          match(TOKEN_COMMA);
          state = 204;
          _localctx._optField = optField();
          _localctx.fields.add(_localctx._optField);
          state = 205;
          _localctx.s21 = match(TOKEN_COLON);
          _localctx.cols.add(_localctx.s21);
          state = 206;
          _localctx._expr = expr();
          _localctx.values.add(_localctx._expr);
        }
        state = 212;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 28, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
